--- a/debian/rules
+++ b/debian/rules
@@ -9,5 +9,9 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+override_dh_auto_build:
+override_dh_auto_test:
+    
+
 %:
 	dh $@ 
