--- a/Info3.plist
+++ b/Info3.plist
@@ -14,9 +14,37 @@
 			<key>CFBundleTypeName</key>
 			<string>Artisan Profile</string>
 			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
+			<string>Editor</string>
 			<key>NSDocumentClass</key>
 			<string>Document</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>alrm</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>artisanAlarms.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>Artisan Alarms</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>NSDocumentClass</key>
+			<string>AlarmConfigurations</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>apal</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>artisanPalettes.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>Artisan Palettes</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>NSDocumentClass</key>
+			<string>PaletteConfigurations</string>
 		</dict>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
@@ -26,7 +54,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Artisan</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Artisan, Roast Logger</string>
+	<string>Artisan, Visual Scope for Coffee Roasters</string>
 	<key>CFBundleIconFile</key>
 	<string>artisan.icns</string>
 	<key>CFBundleIdentifier</key>
