--- a/debian/usr/share/applications/artisan.desktop
+++ b/debian/usr/share/applications/artisan.desktop
@@ -9,6 +9,6 @@ Exec=artisan %U
 TryExec=artisan
 Icon=artisan.png
 Terminal=false
-Categories=Utility;Chart;
+Categories=Utility;
 MimeType=application/x-artisan-alog;application/x-artisan-alrm;application/x-artisan-apal;
 
