--- a/debian/usr/share/applications/artisan.desktop
+++ b/debian/usr/share/applications/artisan.desktop
@@ -10,5 +10,5 @@ TryExec=artisan
 Icon=artisan.png
 Terminal=false
 Categories=Utility;
-MimeType=application/x-artisan-alog;application/x-artisan-alrm;application/x-artisan-apal;
+MimeType=application/x-artisan-alog;application/x-artisan-alrm;application/x-artisan-apal;application/x-artisan-wg;
 
