--- a/Info3.plist
+++ b/Info3.plist
@@ -112,17 +112,17 @@
 	<array/>
 	<key>PyRuntimeLocations</key>
 	<array>
-		<string>@executable_path/../Frameworks/Python.framework/Versions/3.3/Python</string>
+		<string>@executable_path/../Frameworks/Python.framework/Versions/3.4/Python</string>
 	</array>
 	<key>PythonInfoDict</key>
 	<dict>
 		<key>PythonExecutable</key>
-		<string>/usr/local/bin/python3</string>
+		<string>/Library/Frameworks/Python.framework/Versions/3.4/bin/python3.4</string>
 		<key>PythonLongVersion</key>
-		<string>3.3.0 (v3.3.0:bd8afb90ebf2, Sep 29 2012, 01:25:11) 
+		<string>3.4.1 (v3.4.1:c0e311e010fc, May 18 2014, 00:54:21) 
 [GCC 4.2.1 (Apple Inc. build 5666) (dot 3)]</string>
 		<key>PythonShortVersion</key>
-		<string>3.3</string>
+		<string>3.4</string>
 		<key>py2app</key>
 		<dict>
 			<key>alias</key>
@@ -130,7 +130,7 @@
 			<key>template</key>
 			<string>app</string>
 			<key>version</key>
-			<string>0.7.1</string>
+			<string>0.9</string>
 		</dict>
 	</dict>
 </dict>
